<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreSoshumActivity"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:contentDescription="@string/accent"
        android:src="@drawable/acent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="620dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_sosiologi"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/masukkan_nilai_sosiologi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_sosiologi"
                style="@style/TextInput"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="35dp"
                android:layout_width="match_parent"
                android:autofillHints=".."
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sosiologi"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_sejarah"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/masukkan_nilai_sejarah"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_sosiologi" />

            <EditText
                android:id="@+id/et_sejarah"
                style="@style/TextInput"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="35dp"
                android:layout_width="match_parent"
                android:autofillHints=".."
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sejarah"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_geografi"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/masukkan_nilai_geografi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_sejarah" />

            <EditText
                android:id="@+id/et_geografi"
                style="@style/TextInput"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:autofillHints=".."
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_geografi"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_ekonomi"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/masukkan_nilai_ekonomi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_geografi" />

            <EditText
                android:id="@+id/et_ekonomi"
                style="@style/TextInput"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="35dp"
                android:layout_width="match_parent"
                android:autofillHints=".."
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ekonomi"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_reading"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/masukkan_nilai_reading_comprehension_writing_for_science"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_ekonomi" />

            <EditText
                android:id="@+id/et_reading"
                style="@style/TextInput"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="35dp"
                android:layout_width="match_parent"
                android:autofillHints=".."
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_reading"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_general_reasoning"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/masukkan_nilai_general_reasoning_for_science"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_reading" />

            <EditText
                android:id="@+id/et_general_reasoning"
                style="@style/TextInput"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="35dp"
                android:layout_width="match_parent"
                android:autofillHints=".."
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_general_reasoning"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_quantitative"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/masukkan_nilai_quantitative_skills_for_science"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_general_reasoning" />

            <EditText
                android:id="@+id/et_quantitative"
                style="@style/TextInput"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="35dp"
                android:layout_width="match_parent"
                android:autofillHints=".."
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_quantitative"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_general_knowledge"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/masukkan_nilai_general_knowledge_understanding_for_science"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_quantitative" />

            <EditText
                android:id="@+id/et_general_knowledge"
                style="@style/TextInput"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="35dp"
                android:layout_width="match_parent"
                android:autofillHints=".."
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_general_knowledge"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btnLanjutSoshum"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
                android:text="Lanjut"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_general_knowledge"
                android:onClick="onClickScoreSoshum" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>