<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity"
    android:background="@color/blue">

<!--CardView-->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_universitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="26dp"
                android:text="@string/nama_universitas"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_universitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_universitas"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="26dp"
                android:autofillHints="Universitas Sample"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"
                android:textSize="24sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_jurusan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_universitas"
                android:layout_marginStart="26dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="26dp"
                android:text="@string/nama_jurusan"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_jurusan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_jurusan"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="26dp"
                android:autofillHints="Jurusan A"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"
                android:textSize="24sp"
                tools:ignore="LabelFor" />

            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_jurusan"
                android:layout_marginStart="120dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="120dp"
                android:layout_marginBottom="50dp"
                android:text="@string/tb_hitung" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <!--GuideLine-->
    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guidelineHorizontal"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="64dp"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintGuide_end="571dp"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.08417509"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>